# toying

factory/: CMakeLists.txt  yambs.toml
factory/include/: boat.h  boat_factory.h  factory.h  truck.h  vehicle.h
factory/src/: boat.cpp  main.cpp  truck.cpp
hashbrown/: yambs.toml
hashbrown/.yambs/: toolchain.toml
hashbrown/include/: hashbrown.hpp
hashbrown/src/: main.cpp
hashbrown/test/: test_hashbrown.cpp
mandelbrot-cpp/: CMakeLists.txt
mandelbrot-cpp/include/: mandelbrot.hpp
mandelbrot-cpp/src/: main.cpp  mandelbrot.cpp  run.mmk
monte-carlo-pi/: .clang-format  CMakeLists.txt
monte-carlo-pi/src/: CMakeLists.txt  main.cpp
simplified-function/: main.cpp
